// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Readmes should compile readme for a project: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**typedoc-stubs - v0.0**](http://www.google.com) ∙ [README](README.md) ∙ [API](modules.md)

***

# MY README

> Some block quote

Some text.

***

Generated using [typedoc-plugin-markdown](https://www.npmjs.com/package/typedoc-plugin-markdown) and [TypeDoc](https://typedoc.org/)
"
`;

exports[`Readmes should compile readmes for a momorepo: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-1** ∙ [README](README.md) ∙ [API](modules.md)

***

# PACKAGE 1 README

Readme content

***

Generated using [typedoc-plugin-markdown](https://www.npmjs.com/package/typedoc-plugin-markdown) and [TypeDoc](https://typedoc.org/)
"
`;

exports[`Readmes should compile readmes for a momorepo: (Output File Strategy "members") (Option Group "1") 2`] = `
"**package-2** ∙ [README](README.md) ∙ [API](modules.md)

***

# PACKAGE 2 README

Readme content

***

Generated using [typedoc-plugin-markdown](https://www.npmjs.com/package/typedoc-plugin-markdown) and [TypeDoc](https://typedoc.org/)
"
`;
